manifests/kuard-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kuard
  labels:
    app: kuard-label
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      imagePullPolicy: IfNotPresent
      name: kuard-container
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
