manifests/kuard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  type: NodePort
  selector:
    app: kuard
  ports:
  - nodePort: 30001
    port: 8080
    protocol: TCP
